Added FPS metrics
Signed-off-by: Leo Kosta <kostaleonard@gmail.com>

--- a/notebooks/prediction-and-evaluation.ipynb
+++ b/notebooks/prediction-and-evaluation.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,8 @@
     "    PARTITION_LABEL_DIR, get_train_only_kitti_partition, get_labels, \\\n",
     "    create_partition_label_dirs\n",
     "from shutil import rmtree\n",
-    "import os"
+    "import os\n",
+    "import time"
    ]
   },
   {
@@ -9631,7 +9632,31 @@
    "source": [
     "# Evaluation: frames per second (FPS)\n",
     "\n",
-    "In this section, we will test the speed of our model's predictions in frames per second."
+    "In this section, we will test the speed of our model's predictions in frames per second. Runs on images from the test set.\n",
+    "\n",
+    "**Caution: overwrites previous predictions.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rmtree(TRAIN_PREDICT_DIR)\n",
+    "rmtree(VAL_PREDICT_DIR)\n",
+    "rmtree(TEST_PREDICT_DIR)\n",
+    "os.mkdir(TRAIN_PREDICT_DIR)\n",
+    "os.mkdir(VAL_PREDICT_DIR)\n",
+    "os.mkdir(TEST_PREDICT_DIR)\n",
+    "create_partition_label_dirs(partition, LABEL_DIR, PARTITION_LABEL_DIR)\n",
+    "rmtree(TRAIN_3D_PREDICT_DIR)\n",
+    "rmtree(VAL_3D_PREDICT_DIR)\n",
+    "rmtree(TEST_3D_PREDICT_DIR)\n",
+    "os.mkdir(TRAIN_3D_PREDICT_DIR)\n",
+    "os.mkdir(VAL_3D_PREDICT_DIR)\n",
+    "os.mkdir(TEST_3D_PREDICT_DIR)\n",
+    "NUM_EXAMPLES = 10"
    ]
   },
   {
@@ -9643,11 +9668,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [00:25<00:00,  2.53s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total 2D prediction time: 25.313179969787598s\n",
+      "Average 2D prediction time (10 examples): 2.5313179969787596s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "start = time.time()\n",
+    "kitti_test_predictions = predict_on_list(yolo_model, sess, TRAIN_IMAGE_DIR,\n",
+    "                                        partition[TEST_KEY],\n",
+    "                                        max_images=NUM_EXAMPLES)\n",
+    "end = time.time()\n",
+    "write_predictions_on_dir(kitti_test_predictions, TRAIN_IMAGE_DIR,\n",
+    "                         TEST_PREDICT_DIR, label_dir=LABEL_DIR)\n",
+    "predict_2d_time = end - start\n",
+    "print('Total 2D prediction time: {0}s'.format(predict_2d_time))\n",
+    "print('Average 2D prediction time ({0} examples): {1}s'.format(\n",
+    "    NUM_EXAMPLES, predict_2d_time / NUM_EXAMPLES))"
    ]
   },
   {
@@ -9659,12 +9717,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python src/main/main.py --mode test --gpu -1 --image data/KITTI/data_object_image_2/training/image_2/ --box2d data/predictions/2d_boxes/test/ --model model/model-1 --output data/predictions/3d_boxes/test/\n",
+      "WARNING:tensorflow:\n",
+      "The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
+      "For more information, please see:\n",
+      "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
+      "  * https://github.com/tensorflow/addons\n",
+      "  * https://github.com/tensorflow/io (for I/O related ops)\n",
+      "If you depend on functionality not listed there, please file an issue.\n",
+      "\n",
+      "WARNING:tensorflow:From src/main/main.py:39: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/contrib/layers/python/layers/layers.py:1057: Layer.apply (from tensorflow.python.keras.engine.base_layer) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Please use `layer.__call__` method instead.\n",
+      "WARNING:tensorflow:From /Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/contrib/layers/python/layers/layers.py:1634: flatten (from tensorflow.python.layers.core) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use keras.layers.flatten instead.\n",
+      "WARNING:tensorflow:From src/main/main.py:110: The name tf.losses.mean_squared_error is deprecated. Please use tf.compat.v1.losses.mean_squared_error instead.\n",
+      "\n",
+      "WARNING:tensorflow:From /Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/ops/losses/losses_impl.py:121: where (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
+      "WARNING:tensorflow:From src/main/main.py:122: calling l2_normalize (from tensorflow.python.ops.nn_impl) with dim is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "dim is deprecated, use axis instead\n",
+      "WARNING:tensorflow:From src/main/main.py:134: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "\n",
+      "Future major versions of TensorFlow will allow gradients to flow\n",
+      "into the labels input on backprop by default.\n",
+      "\n",
+      "See `tf.nn.softmax_cross_entropy_with_logits_v2`.\n",
+      "\n",
+      "WARNING:tensorflow:From src/main/main.py:141: The name tf.train.GradientDescentOptimizer is deprecated. Please use tf.compat.v1.train.GradientDescentOptimizer instead.\n",
+      "\n",
+      "WARNING:tensorflow:From src/main/main.py:216: The name tf.ConfigProto is deprecated. Please use tf.compat.v1.ConfigProto instead.\n",
+      "\n",
+      "WARNING:tensorflow:From src/main/main.py:218: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "2021-01-07 09:48:37.057602: I tensorflow/core/platform/cpu_feature_guard.cc:142] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n",
+      "2021-01-07 09:48:37.069489: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x7ff76c7c76f0 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
+      "2021-01-07 09:48:37.069519: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
+      "WARNING:tensorflow:From src/main/main.py:221: The name tf.global_variables_initializer is deprecated. Please use tf.compat.v1.global_variables_initializer instead.\n",
+      "\n",
+      "WARNING:tensorflow:From src/main/main.py:225: The name tf.train.Saver is deprecated. Please use tf.compat.v1.train.Saver instead.\n",
+      "\n",
+      "Loaded 7481 test images\n",
+      "data/KITTI/data_object_image_2/training/image_2/000466.png\n",
+      "data/KITTI/data_object_image_2/training/image_2/000751.png\n",
+      "data/KITTI/data_object_image_2/training/image_2/001605.png\n",
+      "data/KITTI/data_object_image_2/training/image_2/002081.png\n",
+      "data/KITTI/data_object_image_2/training/image_2/002508.png\n",
+      "data/KITTI/data_object_image_2/training/image_2/003068.png\n",
+      "data/KITTI/data_object_image_2/training/image_2/003690.png\n",
+      "data/KITTI/data_object_image_2/training/image_2/004043.png\n",
+      "data/KITTI/data_object_image_2/training/image_2/006632.png\n",
+      "data/KITTI/data_object_image_2/training/image_2/007106.png\n",
+      "Total 3D prediction time: 6.680970907211304s\n",
+      "Average 3D prediction time (10 examples): 0.6680970907211303s\n"
+     ]
+    }
+   ],
+   "source": [
+    "start = time.time()\n",
+    "!cd .. && make predict_on_yolo_test && cd notebooks\n",
+    "end = time.time()\n",
+    "predict_3d_time = end - start\n",
+    "print('Total 3D prediction time: {0}s'.format(predict_3d_time))\n",
+    "print('Average 3D prediction time ({0} examples): {1}s'.format(\n",
+    "    NUM_EXAMPLES, predict_3d_time / NUM_EXAMPLES))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Complete pipeline (2D prediction plus 3D prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total 2D + 3D prediction time: 31.9941508769989s\n",
+      "Average 2D + 3D prediction time (10 examples): 3.19941508769989s\n"
+     ]
+    }
+   ],
+   "source": [
+    "predict_total_time = predict_2d_time + predict_3d_time\n",
+    "print('Total 2D + 3D prediction time: {0}s'.format(predict_total_time))\n",
+    "print('Average 2D + 3D prediction time ({0} examples): {1}s'.format(\n",
+    "    NUM_EXAMPLES, predict_total_time / NUM_EXAMPLES))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# TODO"
-   ]
+   "source": []
   }
  ],
  "metadata": {
