--- a/notebooks/prediction-and-evaluation.ipynb
+++ b/notebooks/prediction-and-evaluation.ipynb
@@ -9668,22 +9668,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:25<00:00,  2.53s/it]"
+      "100%|██████████| 10/10 [00:32<00:00,  3.29s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total 2D prediction time: 25.313179969787598s\n",
-      "Average 2D prediction time (10 examples): 2.5313179969787596s\n"
+      "Total 2D prediction time: 32.86926794052124 s\n",
+      "2D prediction FPS (10 examples): 3.286926794052124 s\n"
      ]
     },
     {
@@ -9703,8 +9703,8 @@
     "write_predictions_on_dir(kitti_test_predictions, TRAIN_IMAGE_DIR,\n",
     "                         TEST_PREDICT_DIR, label_dir=LABEL_DIR)\n",
     "predict_2d_time = end - start\n",
-    "print('Total 2D prediction time: {0}s'.format(predict_2d_time))\n",
-    "print('Average 2D prediction time ({0} examples): {1}s'.format(\n",
+    "print('Total 2D prediction time: {0} s'.format(predict_2d_time))\n",
+    "print('2D prediction FPS ({0} examples): {1} s'.format(\n",
     "    NUM_EXAMPLES, predict_2d_time / NUM_EXAMPLES))"
    ]
   },
@@ -9717,7 +9717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -9763,9 +9763,9 @@
       "\n",
       "WARNING:tensorflow:From src/main/main.py:218: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
       "\n",
-      "2021-01-07 09:48:37.057602: I tensorflow/core/platform/cpu_feature_guard.cc:142] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n",
-      "2021-01-07 09:48:37.069489: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x7ff76c7c76f0 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
-      "2021-01-07 09:48:37.069519: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
+      "2021-01-07 10:09:35.095218: I tensorflow/core/platform/cpu_feature_guard.cc:142] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n",
+      "2021-01-07 10:09:35.104799: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x7fc5e8c6ff60 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
+      "2021-01-07 10:09:35.104851: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
       "WARNING:tensorflow:From src/main/main.py:221: The name tf.global_variables_initializer is deprecated. Please use tf.compat.v1.global_variables_initializer instead.\n",
       "\n",
       "WARNING:tensorflow:From src/main/main.py:225: The name tf.train.Saver is deprecated. Please use tf.compat.v1.train.Saver instead.\n",
@@ -9781,8 +9781,8 @@
       "data/KITTI/data_object_image_2/training/image_2/004043.png\n",
       "data/KITTI/data_object_image_2/training/image_2/006632.png\n",
       "data/KITTI/data_object_image_2/training/image_2/007106.png\n",
-      "Total 3D prediction time: 6.680970907211304s\n",
-      "Average 3D prediction time (10 examples): 0.6680970907211303s\n"
+      "Total 3D prediction time: 6.86016321182251 s\n",
+      "3D prediction FPS (10 examples): 0.686016321182251 s\n"
      ]
     }
    ],
@@ -9791,8 +9791,8 @@
     "!cd .. && make predict_on_yolo_test && cd notebooks\n",
     "end = time.time()\n",
     "predict_3d_time = end - start\n",
-    "print('Total 3D prediction time: {0}s'.format(predict_3d_time))\n",
-    "print('Average 3D prediction time ({0} examples): {1}s'.format(\n",
+    "print('Total 3D prediction time: {0} s'.format(predict_3d_time))\n",
+    "print('3D prediction FPS ({0} examples): {1} s'.format(\n",
     "    NUM_EXAMPLES, predict_3d_time / NUM_EXAMPLES))"
    ]
   },
@@ -9805,22 +9805,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total 2D + 3D prediction time: 31.9941508769989s\n",
-      "Average 2D + 3D prediction time (10 examples): 3.19941508769989s\n"
+      "Total 2D + 3D prediction time: 39.72943115234375 s\n",
+      "2D + 3D prediction FPS (10 examples): 3.972943115234375 s\n"
      ]
     }
    ],
    "source": [
     "predict_total_time = predict_2d_time + predict_3d_time\n",
-    "print('Total 2D + 3D prediction time: {0}s'.format(predict_total_time))\n",
-    "print('Average 2D + 3D prediction time ({0} examples): {1}s'.format(\n",
+    "print('Total 2D + 3D prediction time: {0} s'.format(predict_total_time))\n",
+    "print('2D + 3D prediction FPS ({0} examples): {1} s'.format(\n",
     "    NUM_EXAMPLES, predict_total_time / NUM_EXAMPLES))"
    ]
   },
