Fixed error in metrics
Signed-off-by: Leo Kosta <kostaleonard@gmail.com>

--- a/notebooks/prediction-and-evaluation.ipynb
+++ b/notebooks/prediction-and-evaluation.ipynb
@@ -9668,22 +9668,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:32<00:00,  3.29s/it]"
+      "100%|██████████| 10/10 [00:38<00:00,  3.88s/it]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total 2D prediction time: 32.86926794052124 s\n",
-      "2D prediction FPS (10 examples): 3.286926794052124 s\n"
+      "Total 2D prediction time: 38.84774875640869 s\n",
+      "2D prediction FPS (10 examples): 0.25741517385483775\n"
      ]
     },
     {
@@ -9704,8 +9704,8 @@
     "                         TEST_PREDICT_DIR, label_dir=LABEL_DIR)\n",
     "predict_2d_time = end - start\n",
     "print('Total 2D prediction time: {0} s'.format(predict_2d_time))\n",
-    "print('2D prediction FPS ({0} examples): {1} s'.format(\n",
-    "    NUM_EXAMPLES, predict_2d_time / NUM_EXAMPLES))"
+    "print('2D prediction FPS ({0} examples): {1}'.format(\n",
+    "    NUM_EXAMPLES, NUM_EXAMPLES / predict_2d_time))"
    ]
   },
   {
@@ -9717,7 +9717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -9763,9 +9763,9 @@
       "\n",
       "WARNING:tensorflow:From src/main/main.py:218: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
       "\n",
-      "2021-01-07 10:09:35.095218: I tensorflow/core/platform/cpu_feature_guard.cc:142] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n",
-      "2021-01-07 10:09:35.104799: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x7fc5e8c6ff60 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
-      "2021-01-07 10:09:35.104851: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
+      "2021-01-07 10:54:15.452298: I tensorflow/core/platform/cpu_feature_guard.cc:142] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n",
+      "2021-01-07 10:54:15.462093: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x7fc2a9ad9b10 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
+      "2021-01-07 10:54:15.462124: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
       "WARNING:tensorflow:From src/main/main.py:221: The name tf.global_variables_initializer is deprecated. Please use tf.compat.v1.global_variables_initializer instead.\n",
       "\n",
       "WARNING:tensorflow:From src/main/main.py:225: The name tf.train.Saver is deprecated. Please use tf.compat.v1.train.Saver instead.\n",
@@ -9781,8 +9781,8 @@
       "data/KITTI/data_object_image_2/training/image_2/004043.png\n",
       "data/KITTI/data_object_image_2/training/image_2/006632.png\n",
       "data/KITTI/data_object_image_2/training/image_2/007106.png\n",
-      "Total 3D prediction time: 6.86016321182251 s\n",
-      "3D prediction FPS (10 examples): 0.686016321182251 s\n"
+      "Total 3D prediction time: 6.666807174682617 s\n",
+      "3D prediction FPS (10 examples): 1.4999683863627065\n"
      ]
     }
    ],
@@ -9792,8 +9792,8 @@
     "end = time.time()\n",
     "predict_3d_time = end - start\n",
     "print('Total 3D prediction time: {0} s'.format(predict_3d_time))\n",
-    "print('3D prediction FPS ({0} examples): {1} s'.format(\n",
-    "    NUM_EXAMPLES, predict_3d_time / NUM_EXAMPLES))"
+    "print('3D prediction FPS ({0} examples): {1}'.format(\n",
+    "    NUM_EXAMPLES, NUM_EXAMPLES / predict_3d_time))"
    ]
   },
   {
@@ -9805,23 +9805,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total 2D + 3D prediction time: 39.72943115234375 s\n",
-      "2D + 3D prediction FPS (10 examples): 3.972943115234375 s\n"
+      "Total 2D + 3D prediction time: 45.51455593109131 s\n",
+      "2D + 3D prediction FPS (10 examples): 0.2197099322498043\n"
      ]
     }
    ],
    "source": [
     "predict_total_time = predict_2d_time + predict_3d_time\n",
     "print('Total 2D + 3D prediction time: {0} s'.format(predict_total_time))\n",
-    "print('2D + 3D prediction FPS ({0} examples): {1} s'.format(\n",
-    "    NUM_EXAMPLES, predict_total_time / NUM_EXAMPLES))"
+    "print('2D + 3D prediction FPS ({0} examples): {1}'.format(\n",
+    "    NUM_EXAMPLES, NUM_EXAMPLES / predict_total_time))"
    ]
   },
   {
