--- a/notebooks/prediction-and-evaluation.ipynb
+++ b/notebooks/prediction-and-evaluation.ipynb
@@ -13,9 +13,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /Users/leo/Documents/ML/Courses/FourthBrain/Project/4bai-3d-object-detection/notebooks/model_2d_bounding_box.py:165: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "# Import statements.\n",
     "from model_2d_bounding_box import *\n",
@@ -185,7 +201,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:13<00:00,  1.38s/it]\n"
+      "100%|██████████| 10/10 [00:13<00:00,  1.34s/it]\n"
      ]
     }
    ],
@@ -213,7 +229,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:17<00:00,  1.74s/it]\n"
+      "100%|██████████| 10/10 [00:15<00:00,  1.59s/it]\n"
      ]
     }
    ],
@@ -243,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,14 +273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python src/main/main.py --mode test --gpu -1 --image data/KITTI/data_object_image_2/training/image_2/ --box2d data/predictions/2d_boxes/train/ --model model/model-1 --output data/predictions/3d_boxes/train/\n",
+      "python src/main/main.py --mode test --gpu -1 --image data/KITTI/data_object_image_2/training/image_2/ --box2d data/predictions/2d_boxes/train/ --model model/demo_model --output data/predictions/3d_boxes/train/\n",
       "WARNING:tensorflow:\n",
       "The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
       "For more information, please see:\n",
@@ -303,24 +319,81 @@
       "\n",
       "WARNING:tensorflow:From src/main/main.py:218: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
       "\n",
-      "2021-01-06 14:33:40.763275: I tensorflow/core/platform/cpu_feature_guard.cc:142] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n",
-      "2021-01-06 14:33:40.773294: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x7f88238ce530 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
-      "2021-01-06 14:33:40.773323: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
+      "2021-01-11 09:59:12.802398: I tensorflow/core/platform/cpu_feature_guard.cc:142] Your CPU supports instructions that this TensorFlow binary was not compiled to use: AVX2 FMA\n",
+      "2021-01-11 09:59:12.812526: I tensorflow/compiler/xla/service/service.cc:168] XLA service 0x7fedd09093c0 initialized for platform Host (this does not guarantee that XLA will be used). Devices:\n",
+      "2021-01-11 09:59:12.812554: I tensorflow/compiler/xla/service/service.cc:176]   StreamExecutor device (0): Host, Default Version\n",
       "WARNING:tensorflow:From src/main/main.py:221: The name tf.global_variables_initializer is deprecated. Please use tf.compat.v1.global_variables_initializer instead.\n",
       "\n",
       "WARNING:tensorflow:From src/main/main.py:225: The name tf.train.Saver is deprecated. Please use tf.compat.v1.train.Saver instead.\n",
       "\n",
-      "Loaded 7481 test images\n",
-      "data/KITTI/data_object_image_2/training/image_2/000401.png\n",
-      "data/KITTI/data_object_image_2/training/image_2/000650.png\n",
-      "data/KITTI/data_object_image_2/training/image_2/001572.png\n",
-      "data/KITTI/data_object_image_2/training/image_2/002373.png\n",
-      "data/KITTI/data_object_image_2/training/image_2/002527.png\n",
-      "data/KITTI/data_object_image_2/training/image_2/004451.png\n",
-      "data/KITTI/data_object_image_2/training/image_2/005630.png\n",
-      "data/KITTI/data_object_image_2/training/image_2/006835.png\n",
-      "data/KITTI/data_object_image_2/training/image_2/007114.png\n",
-      "data/KITTI/data_object_image_2/training/image_2/007141.png\n"
+      "2021-01-11 09:59:13.105190: W tensorflow/core/framework/op_kernel.cc:1651] OP_REQUIRES failed at save_restore_v2_ops.cc:184 : Out of range: Read less bytes than requested\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/client/session.py\", line 1365, in _do_call\n",
+      "    return fn(*args)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/client/session.py\", line 1350, in _run_fn\n",
+      "    target_list, run_metadata)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/client/session.py\", line 1443, in _call_tf_sessionrun\n",
+      "    run_metadata)\n",
+      "tensorflow.python.framework.errors_impl.OutOfRangeError: Read less bytes than requested\n",
+      "\t [[{{node save/RestoreV2}}]]\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"src/main/main.py\", line 319, in <module>\n",
+      "    test(args.model, args.image, args.box2d, args.output)\n",
+      "  File \"src/main/main.py\", line 226, in test\n",
+      "    saver.restore(sess, model)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/training/saver.py\", line 1290, in restore\n",
+      "    {self.saver_def.filename_tensor_name: save_path})\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/client/session.py\", line 956, in run\n",
+      "    run_metadata_ptr)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/client/session.py\", line 1180, in _run\n",
+      "    feed_dict_tensor, options, run_metadata)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/client/session.py\", line 1359, in _do_run\n",
+      "    run_metadata)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/client/session.py\", line 1384, in _do_call\n",
+      "    raise type(e)(node_def, op, message)\n",
+      "tensorflow.python.framework.errors_impl.OutOfRangeError: Read less bytes than requested\n",
+      "\t [[node save/RestoreV2 (defined at /Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/framework/ops.py:1748) ]]\n",
+      "\n",
+      "Original stack trace for 'save/RestoreV2':\n",
+      "  File \"src/main/main.py\", line 319, in <module>\n",
+      "    test(args.model, args.image, args.box2d, args.output)\n",
+      "  File \"src/main/main.py\", line 225, in test\n",
+      "    saver = tf.train.Saver()\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/training/saver.py\", line 828, in __init__\n",
+      "    self.build()\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/training/saver.py\", line 840, in build\n",
+      "    self._build(self._filename, build_save=True, build_restore=True)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/training/saver.py\", line 878, in _build\n",
+      "    build_restore=build_restore)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/training/saver.py\", line 508, in _build_internal\n",
+      "    restore_sequentially, reshape)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/training/saver.py\", line 328, in _AddRestoreOps\n",
+      "    restore_sequentially)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/training/saver.py\", line 575, in bulk_restore\n",
+      "    return io_ops.restore_v2(filename_tensor, names, slices, dtypes)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/ops/gen_io_ops.py\", line 1696, in restore_v2\n",
+      "    name=name)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/framework/op_def_library.py\", line 794, in _apply_op_helper\n",
+      "    op_def=op_def)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/util/deprecation.py\", line 507, in new_func\n",
+      "    return func(*args, **kwargs)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/framework/ops.py\", line 3357, in create_op\n",
+      "    attrs, op_def, compute_device)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/framework/ops.py\", line 3426, in _create_op_internal\n",
+      "    op_def=op_def)\n",
+      "  File \"/Users/leo/anaconda3/envs/4bai-project/lib/python3.6/site-packages/tensorflow_core/python/framework/ops.py\", line 1748, in __init__\n",
+      "    self._traceback = tf_stack.extract_stack()\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "make: *** [predict_on_yolo_train] Error 1\r\n"
      ]
     }
    ],
