--- a/notebooks/prediction-and-evaluation.ipynb
+++ b/notebooks/prediction-and-evaluation.ipynb
@@ -13,25 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From /Users/leo/Documents/ML/Courses/FourthBrain/Project/4bai-3d-object-detection/notebooks/model_2d_bounding_box.py:165: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import statements.\n",
     "from model_2d_bounding_box import *\n",
@@ -45,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,27 +40,6 @@
     "                                  'val')\n",
     "TEST_3D_PREDICT_DIR = os.path.join('..', 'data', 'predictions', '3d_boxes',\n",
     "                                   'test')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Recommended TensorFlow version: 1.15.0\n",
-      "Currently running: 1.15.0\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Recommended TensorFlow version: 1.15.0')\n",
-    "print('Currently running: {0}'.format(tf.__version__))\n",
-    "if not tf.__version__.startswith('1.'):\n",
-    "    raise ValueError('This module is only compatible with TensorFlow 1.x.')"
    ]
   },
   {
@@ -676,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -801,33 +764,41 @@
       "./kitti_eval/evaluate_object_3d_offline data/KITTI/training/label_2/ data/predictions/3d_boxes/train/\n",
       "Thank you for participating in our evaluation!\n",
       "Loading detections...\n",
-      "number of files for evaluation: 10\n",
+      "number of files for evaluation: 202\n",
       "  done.\n",
       "save data/predictions/3d_boxes/train//plot/car_detection.txt\n",
-      "car_detection AP: 15.151514 22.727274 23.347107\n",
+      "car_detection AP: 100.000000 100.000000 100.000000\n",
       "save data/predictions/3d_boxes/train//plot/car_orientation.txt\n",
-      "car_orientation AP: 15.079683 22.159119 22.757021\n",
+      "car_orientation AP: 69.453743 64.508286 63.121750\n",
       "save data/predictions/3d_boxes/train//plot/pedestrian_detection.txt\n",
-      "pedestrian_detection AP: 9.090909 9.090909 9.090909\n",
+      "pedestrian_detection AP: 90.909096 100.000000 100.000000\n",
       "save data/predictions/3d_boxes/train//plot/pedestrian_orientation.txt\n",
-      "pedestrian_orientation AP: 0.351109 0.351109 0.351109\n",
-      "save data/predictions/3d_boxes/train//plot/car_detection_ground.txt\n",
-      "car_detection_ground AP: 17.532467 26.262629 27.272728\n",
-      "save data/predictions/3d_boxes/train//plot/pedestrian_detection_ground.txt\n",
-      "pedestrian_detection_ground AP: 9.090909 9.090909 9.090909\n",
-      "Eval 3D bounding boxes\n"
+      "pedestrian_orientation AP: 62.988369 65.720306 63.185764\n",
+      "save data/predictions/3d_boxes/train//plot/cyclist_detection.txt\n",
+      "cyclist_detection AP: 36.363636 72.727272 81.818184\n",
+      "save data/predictions/3d_boxes/train//plot/cyclist_orientation.txt\n",
+      "cyclist_orientation AP: 17.926924 39.556091 43.538597\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "save data/predictions/3d_boxes/train//plot/car_detection_3d.txt\r\n",
-      "car_detection_3d AP: 17.532467 18.181818 25.454544\r\n",
-      "save data/predictions/3d_boxes/train//plot/pedestrian_detection_3d.txt\r\n",
-      "pedestrian_detection_3d AP: 9.090909 9.090909 9.090909\r\n",
-      "Your evaluation results are available at:\r\n",
-      "data/predictions/3d_boxes/train/\r\n"
+      "save data/predictions/3d_boxes/train//plot/car_detection_ground.txt\n",
+      "car_detection_ground AP: 56.941391 59.648079 62.412731\n",
+      "save data/predictions/3d_boxes/train//plot/pedestrian_detection_ground.txt\n",
+      "pedestrian_detection_ground AP: 88.537544 98.711525 89.862656\n",
+      "save data/predictions/3d_boxes/train//plot/cyclist_detection_ground.txt\n",
+      "cyclist_detection_ground AP: 31.550800 44.819164 52.762920\n",
+      "Eval 3D bounding boxes\n",
+      "save data/predictions/3d_boxes/train//plot/car_detection_3d.txt\n",
+      "car_detection_3d AP: 41.454174 50.639164 48.357506\n",
+      "save data/predictions/3d_boxes/train//plot/pedestrian_detection_3d.txt\n",
+      "pedestrian_detection_3d AP: 88.134979 89.537315 89.678154\n",
+      "save data/predictions/3d_boxes/train//plot/cyclist_detection_3d.txt\n",
+      "cyclist_detection_3d AP: 31.550800 44.819164 52.762920\n",
+      "Your evaluation results are available at:\n",
+      "data/predictions/3d_boxes/train/\n"
      ]
     }
    ],
